correction tablet title

--- a/css/main.css
+++ b/css/main.css
@@ -707,7 +707,7 @@ img {
       text-align: center;
   } */
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .feature__title {
     text-align: center;
   }
