--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -119,7 +119,7 @@ text-transform: uppercase;
     text-align: center;
 } */
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width:1199px) {
     text-align: center;
 }
     
